crates/parser/tests/snapshots/comment_inline.snap
---
source: crates/parser/tests/snapshots.rs
---
# comment-inline

## Input

```
key value # this is an inline comment

```

## CST

```
SOURCE_FILE@0..38
  ENTRY@0..38
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    LINE_STRING@4..9
      STRING@4..9 "value"
    COMMENT@9..37 " # this is an inline  ..."
    NEWLINE@37..38 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: LineString {
                string: STRING@4..9 "value",
            },
        },
    ],
}
```

vim:ft=markdown
