crates/parser/tests/snapshots/crlf_line_endings.snap
---
source: crates/parser/tests/snapshots.rs
---
# crlf-line-endings

## Input

```
a 1
b two

```

## CST

```
SOURCE_FILE@0..12
  ENTRY@0..5
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..3
      NUMERAL@2..3 "1"
    NEWLINE@3..5 "\r\n"
  ENTRY@5..12
    WORD_KEY@5..6
      WORD@5..6 "b"
    SPACE@6..7 " "
    LINE_STRING@7..10
      STRING@7..10 "two"
    NEWLINE@10..12 "\r\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..3 "1",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@5..6 "b",
            },
            value: LineString {
                string: STRING@7..10 "two",
            },
        },
    ],
}
```

vim:ft=markdown
