crates/parser/tests/snapshots/crlf_mixed.snap
---
source: crates/parser/tests/snapshots.rs
---
# crlf-mixed

## Input

```
a 1
b 2
c 3

```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..5
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..3
      NUMERAL@2..3 "1"
    NEWLINE@3..5 "\r\n"
  ENTRY@5..9
    WORD_KEY@5..6
      WORD@5..6 "b"
    SPACE@6..7 " "
    INTEGER@7..8
      NUMERAL@7..8 "2"
    NEWLINE@8..9 "\n"
  ENTRY@9..14
    WORD_KEY@9..10
      WORD@9..10 "c"
    SPACE@10..11 " "
    INTEGER@11..12
      NUMERAL@11..12 "3"
    NEWLINE@12..14 "\r\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..3 "1",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@5..6 "b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@7..8 "2",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@9..10 "c",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@11..12 "3",
            },
        },
    ],
}
```

vim:ft=markdown
